--- a/TrashCollector/Views/Account/Register.cshtml
+++ b/TrashCollector/Views/Account/Register.cshtml
@@ -52,6 +52,12 @@
             @Html.TextBoxFor(m => m.ZipCode, new { @class = "form-control" })
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+        </div>
+    </div>
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
@@ -71,11 +77,11 @@
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+    @Html.ValidationSummary("Are you a customer or employee? Please type customer or employee.", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.Label("user Role", new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.UserRoles, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @*@Html.DropDownList("Name")*@
-            @Html.DropDownList("UserRoles", (SelectList)ViewBag.Name, " ")
+            @Html.TextBoxFor(m => m.UserRoles, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
