--- a/TrashCollector/Views/Employees/Index.cshtml
+++ b/TrashCollector/Views/Employees/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Pickups In Your Area</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
