--- a/TrashCollector/Views/Customers/Details.cshtml
+++ b/TrashCollector/Views/Customers/Details.cshtml
@@ -6,61 +6,27 @@
 
 <h2>Details</h2>
 
-<div>
-    <h4>Customer</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.CustomerName)
-        </dt>
+<td align="right" style="color:#FFFFFF;padding-right:10;">
 
-        <dd>
-            @Html.DisplayFor(model => model.CustomerName)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ScheduledPickUpDay)
-        </dt>
+    <h3>   @Html.ActionLink("Click to Set a New Pickup Date", "Index", "Customers") </h3>
 
-        <dd>
-            @Html.DisplayFor(model => model.ScheduledPickUpDay)
-        </dd>
+</td>
+<td align="right" style="color:#FFFFFF;padding-right:10;">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SpecialPickUpDay)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.SpecialPickUpDay)
-        </dd>
+    <h3>   @Html.ActionLink("CLick to Set a Special Pickup Date", "Index", "Customers") </h3>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SuspendPickupStartDate)
-        </dt>
+</td>
+<td align="right" style="color:#FFFFFF;padding-right:10;">
 
-        <dd>
-            @Html.DisplayFor(model => model.SuspendPickupStartDate)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SuspendPickupEndDate)
-        </dt>
+    <h3>   @Html.ActionLink("Click to View Monthly Balance Due", "Index", "Customers") </h3>
 
-        <dd>
-            @Html.DisplayFor(model => model.SuspendPickupEndDate)
-        </dd>
+</td>
+<td align="right" style="color:#FFFFFF;padding-right:10;">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MonthlyBalance)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.MonthlyBalance)
-        </dd>
+    <h3>   @Html.ActionLink("Click to Select Input a Suspension of Pickups", "Index", "Customers") </h3>
 
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+</td>
