--- a/TrashCollector/Views/Customers/Index.cshtml
+++ b/TrashCollector/Views/Customers/Index.cshtml
@@ -1,63 +1,29 @@
-﻿@model IEnumerable<TrashCollector.Models.Customer>
+﻿@model TrashCollector.Models.Customer
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "CustomersPickupSet";
 }
 
-<h2>Index</h2>
+<h2>Edit Your Pickup Date Below</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.CustomerName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ScheduledPickUpDay)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SpecialPickUpDay)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SuspendPickupStartDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SuspendPickupEndDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MonthlyBalance)
-        </th>
-        <th></th>
-    </tr>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.CustomerName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ScheduledPickUpDay)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SpecialPickUpDay)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SuspendPickupStartDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SuspendPickupEndDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MonthlyBalance)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+<div class="form-horizontal">
 
-</table>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.PickupDate, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.PickupDate, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.PickupDate, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="col-md-offset-2 col-md-10">
+        <input type="submit" value="SUBMIT" class="btn btn-default" />
+    </div>
+
+</div>
+}  
