--- a/TrashCollector/Views/Shared/_Layout.cshtml
+++ b/TrashCollector/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Employee", "Index", "Employees")</li>
-                    <li>@Html.ActionLink("Customer", "Customer", "Index")</li>
+                    <li>@Html.ActionLink("Customer", "Details", "Customers")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
