customer end of day work

--- a/TrashCollector/Views/Customers/Details.cshtml
+++ b/TrashCollector/Views/Customers/Details.cshtml
@@ -9,13 +9,13 @@
 <td align="right" style="color:#FFFFFF;padding-right:10;">
 
 
-    <h3>   @Html.ActionLink("Click to Set a New Pickup Date", "Index", "Customers") </h3>
+    <h3>   @Html.ActionLink("Change Your Pickup Date", "Index", "Customers") </h3>
 
 </td>
 <td align="right" style="color:#FFFFFF;padding-right:10;">
 
 
-    <h3>   @Html.ActionLink("CLick to Set a Special Pickup Date", "Index", "Customers") </h3>
+    <h3>   @Html.ActionLink("Apply Special Pickup Date", "Index", "Customers") </h3>
 
 </td>
 <td align="right" style="color:#FFFFFF;padding-right:10;">
@@ -27,6 +27,6 @@
 <td align="right" style="color:#FFFFFF;padding-right:10;">
 
 
-    <h3>   @Html.ActionLink("Click to Select Input a Suspension of Pickups", "Index", "Customers") </h3>
+    <h3>   @Html.ActionLink("Enter a Suspension of Pickups", "Index", "Customers") </h3>
 
 </td>
