customer controller and views work functional, start of employee work

--- a/TrashCollector/Views/Customers/Details.cshtml
+++ b/TrashCollector/Views/Customers/Details.cshtml
@@ -15,18 +15,18 @@
 <td align="right" style="color:#FFFFFF;padding-right:10;">
 
 
-    <h3>   @Html.ActionLink("Apply Special Pickup Date", "Index", "Customers") </h3>
+    <h3>   @Html.ActionLink("Apply Special Pickup Date", "Extra", "Customers") </h3>
 
 </td>
 <td align="right" style="color:#FFFFFF;padding-right:10;">
 
 
-    <h3>   @Html.ActionLink("Click to View Monthly Balance Due", "Index", "Customers") </h3>
+    <h3>   @Html.ActionLink("Click to View Monthly Balance Due", "Balance", "Customers") </h3>
 
 </td>
 <td align="right" style="color:#FFFFFF;padding-right:10;">
 
 
-    <h3>   @Html.ActionLink("Enter a Suspension of Pickups", "Index", "Customers") </h3>
+    <h3>   @Html.ActionLink("Enter a Suspension of Pickups", "Suspension", "Customers") </h3>
 
 </td>
