employee work besides map and google api

--- a/TrashCollector/Views/Employees/Index.cshtml
+++ b/TrashCollector/Views/Employees/Index.cshtml
@@ -60,9 +60,7 @@
                 @Html.DisplayFor(modelItem => item.pickupCompleted)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.ActionLink("Accept Pickup", "Edit", new { id = item.Id }) |
             </td>
         </tr>
     }
