--- a/TrashCollector/Views/Employees/Create.cshtml
+++ b/TrashCollector/Views/Employees/Create.cshtml
@@ -4,25 +4,17 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
-
-
-@using (Html.BeginForm()) 
+<h2>Welcome</h2>
+<br />
+<h4>To begin please your work zipcode below.</h4>
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Employee</h4>
+
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.employeeZipCode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -30,19 +22,13 @@
                 @Html.ValidationMessageFor(model => model.employeeZipCode, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="SUBMIT" class="btn btn-default" />
         </div>
+
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
