--- a/TrashCollector/Views/Employees/Map.cshtml
+++ b/TrashCollector/Views/Employees/Map.cshtml
@@ -12,32 +12,7 @@
 
     <script>
         var geocoder;
-        @*function initMap() {
-        }
-        $(() => {
-            initMap = function (callback) {
-                var coordinates;
-            geocoder = new google.maps.Geocoder();
-            geocoder.geocode({ address: @ViewBag.Address @ViewBag.City @ViewBag.State @ViewBag.ZipCode}, function (results, status) {
-                coords_obj = results[0].geometry.location;
-                coordinates = [coords_obj.nb, coords_obj.ob];
-                callback(coordinates);
-                var uluru = new google.maps.LatLng(coordinates[0], coordinates[1]);
-                var map = new google.maps.Map(document.getElementById('modal-map2'), {
-                    zoom: 15,
-                    center: uluru,
-                    mapTypeId: google.maps.MapTypeId.HYBRID,
-                    zoomControlOptions: {
-                        position: google.maps.ControlPosition.LEFT_BOTTOM
-                    },
-                    streetViewControl: true,
-                    streetViewControlOptions: {
-                        position: google.maps.ControlPosition.LEFT_BOTTOM
-                    },
-                });
-            })
-            }
-        })*@
+
         function initMap (callback) {
             var coordinates;
             geocoder = new google.maps.Geocoder();
@@ -69,25 +44,12 @@
 
         }
 
-        //var address = { address: pickup.address }
-        //callback = function (results, status) { return results }
-        //results = geocoder.geocode(address, callback)
-        //var uluru = new google.maps.LatLng(coordinates[0], coordinates[1]);
-        //var map = new google.maps.Map(document.getElementById('modal-map2'), {
-        //    zoom: 15,
-        //    center: uluru,
-        //    mapTypeId: google.maps.MapTypeId.HYBRID,
-        //    zoomControlOptions: {
-        //        position: google.maps.ControlPosition.LEFT_BOTTOM
-        //    },
-        //    streetViewControl: true,
-        //    streetViewControlOptions: {
-        //        position: google.maps.ControlPosition.LEFT_BOTTOM
-        //    },
-        //});
+      
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=@ViewBag.APIKey&callback=initMap"
             async defer type="text/javascript"></script>
 
 
-
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
