--- a/TrashCollector/Views/Home/Index.cshtml
+++ b/TrashCollector/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
 }
 
 <div class="jumbotron">
-    <h1>Jahneke Trash Collection Services</h1>
-    <p class="lead">Your trash is our cash.</p>
+    <center>
+        <h1 class="display-1"><b>Dialed In<br />Collection Services</b></h1>
+        <p class="lead"><i>"Your trash is our cash"</i></p>
+        <img class="navbar-brand w-50" style="border-radius: 34px;" src="https://i.imgur.com/feYpA5V.jpg">
+    </center>
+ 
 </div>
