--- a/TrashCollector/Views/Shared/_Layout.cshtml
+++ b/TrashCollector/Views/Shared/_Layout.cshtml
@@ -9,21 +9,28 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("J.T.C.S. Inc.", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+    <div class="navbar navbar-fixed-top navbar-light" style="background-color: #e3f2fd; font-family: Georgia; font-style: oblique;">
+        <div class="container-fluid">
+            <div class="navbar-brand w-25">
+              
+                <img class="navbar-brand w-25" style="border-radius: 12px;" src="https://i.imgur.com/feYpA5V.jpg">
+                @Html.ActionLink("Dialed In Collections", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Employee", "Index", "Employees")</li>
-                    <li>@Html.ActionLink("Customer", "Details", "Customers")</li>
+              
+            <button type="button" class="float-xl-left  navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+
+            </button>
+
+
+
+
+            </a>
+            <div class="navbar-collapse collapse text-right" id="navbarNav">
+                <ul class="navbar-nav mr-auto m-lg-2 mt-lg-0">
+                    <li class="nav-item active text-right">@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li class="nav-item active text-right">@Html.ActionLink("Employee", "Index", "Employees")</li>
+                    <li class="nav-item active text-right">@Html.ActionLink("Customer", "Details", "Customers")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -33,7 +40,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year Jahneke Trash Collection Services</p>
+            <p>&copy; @DateTime.Now.Year Dialed In Trash Collection Services</p>
         </footer>
     </div>
 
