styles and views edits

--- a/TrashCollector/Views/Customers/Balance.cshtml
+++ b/TrashCollector/Views/Customers/Balance.cshtml
@@ -15,11 +15,10 @@
         @Html.DisplayFor(model => model.MonthlyBalance)
     </dd>
 
-   
-
 </dl>
+<div>
+    @Html.ActionLink("Back to Menu", "Details")
 </div>
-<p>
+</div>
+<br />
 
-    @Html.ActionLink("Back to Customer Menu", "Details")
-</p>
