--- a/TrashCollector/Views/Customers/Details.cshtml
+++ b/TrashCollector/Views/Customers/Details.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2><u>Account Menu</u></h2>
+<p class="lead"><i>Welcome @ViewBag.Name</i> </p>
 
 <td align="right" style="color:#FFFFFF;padding-right:10;">
 
