--- a/TrashCollector/Views/Customers/Extra.cshtml
+++ b/TrashCollector/Views/Customers/Extra.cshtml
@@ -10,20 +10,23 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+<div class="form-horizontal">
 
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.SpecialPickupDay, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SpecialPickupDay, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SpecialPickupDay, "", new { @class = "text-danger" })
-            </div>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.SpecialPickupDay, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.SpecialPickupDay, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.SpecialPickupDay, "", new { @class = "text-danger" })
         </div>
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="SUBMIT" class="btn btn-default" />
-        </div>
-
     </div>
+    <div class="col-md-offset-2 col-md-10">
+        <input type="submit" value="SUBMIT" class="btn btn-default" />
+    </div>
+    <br />
+    <div>
+        @Html.ActionLink("Back to Menu", "Details")
+    </div>
+</div>
 }  
