--- a/TrashCollector/Views/Customers/Index.cshtml
+++ b/TrashCollector/Views/Customers/Index.cshtml
@@ -25,5 +25,9 @@
         <input type="submit" value="SUBMIT" class="btn btn-default" />
     </div>
 
+    <br />
+    <div>
+        @Html.ActionLink("Back to Menu", "Details")
+    </div>
 </div>
 }  
