--- a/TrashCollector/Views/Customers/Suspension.cshtml
+++ b/TrashCollector/Views/Customers/Suspension.cshtml
@@ -20,7 +20,7 @@
             @Html.EditorFor(model => model.SuspendPickupStartDate, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.SuspendPickupStartDate, "", new { @class = "text-danger" })
         </div>
-        <h4>Please select your prefered suspension start end day below.</h4>
+        <h4>Please select your prefered suspension end day below.</h4>
         @Html.LabelFor(model => model.SuspendPickupEndDate, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.SuspendPickupEndDate, new { htmlAttributes = new { @class = "form-control" } })
@@ -30,7 +30,10 @@
     <div class="col-md-offset-2 col-md-10">
         <input type="submit" value="SUBMIT" class="btn btn-default" />
     </div>
-    
+    <br />
+    <div>
+        @Html.ActionLink("Back to Menu", "Details")
+    </div>
 </div>
 }
 @section Scripts {
