Map all pickups with multiple markers

--- a/TrashCollector/Views/Employees/Index.cshtml
+++ b/TrashCollector/Views/Employees/Index.cshtml
@@ -66,3 +66,9 @@
         </tr>
     }
 </table>
+<td align="right" style="color:#FFFFFF;padding-right:10;">
+
+
+    <h3>   @Html.ActionLink("Map All Pickups In Your Area", "MapAll", "Employees") </h3>
+
+</td>
