--- a/TrashCollector/Views/Customers/Details.cshtml
+++ b/TrashCollector/Views/Customers/Details.cshtml
@@ -31,3 +31,4 @@
     <h3>   @Html.ActionLink("Enter a Suspension of Pickups", "Suspension", "Customers") </h3>
 
 </td>
+<img class="navbar-brand w-50" style="border-radius: 34px;" src="https://i.imgur.com/IyPOrH2.jpg">
