--- a/TrashCollector/Views/Employees/Index.cshtml
+++ b/TrashCollector/Views/Employees/Index.cshtml
@@ -67,8 +67,11 @@
     }
 </table>
 <td align="right" style="color:#FFFFFF;padding-right:10;">
-
-
     <h3>   @Html.ActionLink("Map All Pickups In Your Area", "MapAll", "Employees") </h3>
+    <br />
+    <img class="navbar-brand w-50" style="border-radius: 34px;" src="https://i.imgur.com/IyPOrH2.jpg">
+
+
+
 
 </td>
