--- a/TrashCollector/Views/Customers/Balance.cshtml
+++ b/TrashCollector/Views/Customers/Balance.cshtml
@@ -25,7 +25,7 @@
             data-key="@ViewBag.StripePublishKey"
             data-locale="auto"
             data-description="Sample Charge"
-            data-amount="500">
+            data-amount=(model => model.MonthlyBalance)>
     </script>
 </form>
 <br />
