--- a/TrashCollector/Views/Home/Index.cshtml
+++ b/TrashCollector/Views/Home/Index.cshtml
@@ -2,12 +2,17 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <center>
-        <h1 class="display-1"><b>Dialed In<br />Collection Services</b></h1>
-        <p class="lead"><i>"Your trash is our cash"</i></p>
-        <p class="lead"><i>Use the dropdown menu above:<br />Please select Register (new users) or Log in (existing users)<br />After log in return to dropdown menu and select customer or employee</i></p>
-        <img class="navbar-brand w-50" style="border-radius: 34px;" src="https://i.imgur.com/feYpA5V.jpg">
-    </center>
- 
-</div>
+
+
+
+<div class="bg"></div>
+    <div class="jumbotron">
+        <center>
+            <h1 class="display-1"><b>Dialed In<br />Collection Services</b></h1>
+            <p class="lead"><i>"Your trash is our cash"</i></p>
+            <p class="lead"><i>Use the dropdown menu above:<br />Please select Register (new users) or Log in (existing users)<br />After log in return to dropdown menu and select customer or employee</i></p>
+            <img class="navbar-brand w-50" style="border-radius: 34px;" src="https://i.imgur.com/feYpA5V.jpg">
+        </center>
+
+    </div>
+
